Proyecto_Compi2_Miguel_Jamil/src/GrammarPascalParser.java
// Generated from java-escape by ANTLR 4.11.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class GrammarPascalParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		P_PROGRAM=1, BEGIN=2, END=3, VAR=4, BOOLEAN=5, CHAR=6, INTEGER=7, WHILE=8, 
		DO=9, WRITE=10, WRITELN=11, READ=12, READLN=13, IF=14, ELSE=15, FOR=16, 
		REPEAT=17, THEN=18, UNTIL=19, NIL=20, DIV=21, MOD=22, NOT=23, TO=24, OPBOOL=25, 
		BOOLEAN_VAL=26, ID=27, INTEGER_VAL=28, OPSUM=29, OPMULT=30, OPREL=31, 
		EQUALS=32, ASIGNACION=33, PUNTOCOMA=34, PUNTO=35, COMMA=36, COLON=37, 
		LPAR=38, RPAR=39, R_BRACKET=40, L_BRACKET=41, CARACTERES_ESP=42, CHAR_VAL=43, 
		CONSTSTRING=44, WS=45, COMMENT=46;
	public static final int
		RULE_programa = 0, RULE_inicioPrograma = 1, RULE_listaIdentificadores = 2, 
		RULE_identificador = 3, RULE_declaraciones = 4, RULE_espacioDeclaracionVar = 5, 
		RULE_listaDeclaracionVar = 6, RULE_sentencia_compuesta = 7, RULE_sentencia = 8, 
		RULE_sentenciaAsignacion = 9, RULE_sentencia_condicional = 10, RULE_sentencia_ciclo = 11, 
		RULE_sentencia_funciones = 12, RULE_expresion = 13, RULE_condicion = 14, 
		RULE_expresionBooleana = 15, RULE_expresionRelacional = 16, RULE_expresionIgual = 17, 
		RULE_expresion_Simple = 18, RULE_termino = 19, RULE_operando = 20, RULE_constanteVariable = 21, 
		RULE_especificadorTipo = 22, RULE_signo = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "inicioPrograma", "listaIdentificadores", "identificador", 
			"declaraciones", "espacioDeclaracionVar", "listaDeclaracionVar", "sentencia_compuesta", 
			"sentencia", "sentenciaAsignacion", "sentencia_condicional", "sentencia_ciclo", 
			"sentencia_funciones", "expresion", "condicion", "expresionBooleana", 
			"expresionRelacional", "expresionIgual", "expresion_Simple", "termino", 
			"operando", "constanteVariable", "especificadorTipo", "signo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'program'", "'begin'", "'end'", "'var'", "'boolean'", "'char'", 
			"'integer'", "'while'", "'do'", "'write'", "'writeln'", "'read'", "'readln'", 
			"'if'", "'else'", "'for'", "'repeat'", "'then'", "'until'", "'nil'", 
			"'div'", "'mod'", "'not'", "'to'", null, null, null, null, null, null, 
			null, "'='", "':='", "';'", "'.'", "','", "':'", "'('", "')'", "']'", 
			"'['"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "P_PROGRAM", "BEGIN", "END", "VAR", "BOOLEAN", "CHAR", "INTEGER", 
			"WHILE", "DO", "WRITE", "WRITELN", "READ", "READLN", "IF", "ELSE", "FOR", 
			"REPEAT", "THEN", "UNTIL", "NIL", "DIV", "MOD", "NOT", "TO", "OPBOOL", 
			"BOOLEAN_VAL", "ID", "INTEGER_VAL", "OPSUM", "OPMULT", "OPREL", "EQUALS", 
			"ASIGNACION", "PUNTOCOMA", "PUNTO", "COMMA", "COLON", "LPAR", "RPAR", 
			"R_BRACKET", "L_BRACKET", "CARACTERES_ESP", "CHAR_VAL", "CONSTSTRING", 
			"WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarPascalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public InicioProgramaContext inicioPrograma() {
			return getRuleContext(InicioProgramaContext.class,0);
		}
		public DeclaracionesContext declaraciones() {
			return getRuleContext(DeclaracionesContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarPascalListener ) ((GrammarPascalListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarPascalListener ) ((GrammarPascalListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarPascalVisitor ) return ((GrammarPascalVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			inicioPrograma();
			setState(49);
			declaraciones();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InicioProgramaContext extends ParserRuleContext {
		public TerminalNode P_PROGRAM() { return getToken(GrammarPascalParser.P_PROGRAM, 0); }
		public TerminalNode ID() { return getToken(GrammarPascalParser.ID, 0); }
		public TerminalNode PUNTOCOMA() { return getToken(GrammarPascalParser.PUNTOCOMA, 0); }
		public TerminalNode LPAR() { return getToken(GrammarPascalParser.LPAR, 0); }
		public ListaIdentificadoresContext listaIdentificadores() {
			return getRuleContext(ListaIdentificadoresContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(GrammarPascalParser.RPAR, 0); }
		public InicioProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicioPrograma; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarPascalListener ) ((GrammarPascalListener)listener).enterInicioPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarPascalListener ) ((GrammarPascalListener)listener).exitInicioPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarPascalVisitor ) return ((GrammarPascalVisitor<? extends T>)visitor).visitInicioPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InicioProgramaContext inicioPrograma() throws RecognitionException {
		InicioProgramaContext _localctx = new InicioProgramaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_inicioPrograma);
		try {
			setState(61);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(51);
				match(P_PROGRAM);
				setState(52);
				match(ID);
				setState(53);
				match(PUNTOCOMA);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(54);
				match(P_PROGRAM);
				setState(55);
				match(ID);
				setState(56);
				match(LPAR);
				setState(57);
				listaIdentificadores(0);
				setState(58);
				match(RPAR);
				setState(59);
				match(PUNTOCOMA);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListaIdentificadoresContext extends ParserRuleContext {
		public IdentificadorContext identificador() {
			return getRuleContext(IdentificadorContext.class,0);
		}
		public ListaIdentificadoresContext listaIdentificadores() {
			return getRuleContext(ListaIdentificadoresContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(GrammarPascalParser.COMMA, 0); }
		public ListaIdentificadoresContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaIdentificadores; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarPascalListener ) ((GrammarPascalListener)listener).enterListaIdentificadores(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarPascalListener ) ((GrammarPascalListener)listener).exitListaIdentificadores(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarPascalVisitor ) return ((GrammarPascalVisitor<? extends T>)visitor).visitListaIdentificadores(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListaIdentificadoresContext listaIdentificadores() throws RecognitionException {
		return listaIdentificadores(0);
	}

	private ListaIdentificadoresContext listaIdentificadores(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ListaIdentificadoresContext _localctx = new ListaIdentificadoresContext(_ctx, _parentState);
		ListaIdentificadoresContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_listaIdentificadores, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(64);
			identificador();
			}
			_ctx.stop = _input.LT(-1);
			setState(71);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ListaIdentificadoresContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_listaIdentificadores);
					setState(66);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(67);
					match(COMMA);
					setState(68);
					identificador();
					}
					} 
				}
				setState(73);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentificadorContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GrammarPascalParser.ID, 0); }
		public IdentificadorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identificador; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarPascalListener ) ((GrammarPascalListener)listener).enterIdentificador(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarPascalListener ) ((GrammarPascalListener)listener).exitIdentificador(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarPascalVisitor ) return ((GrammarPascalVisitor<? extends T>)visitor).visitIdentificador(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentificadorContext identificador() throws RecognitionException {
		IdentificadorContext _localctx = new IdentificadorContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_identificador);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionesContext extends ParserRuleContext {
		public EspacioDeclaracionVarContext espacioDeclaracionVar() {
			return getRuleContext(EspacioDeclaracionVarContext.class,0);
		}
		public Sentencia_compuestaContext sentencia_compuesta() {
			return getRuleContext(Sentencia_compuestaContext.class,0);
		}
		public DeclaracionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaraciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarPascalListener ) ((GrammarPascalListener)listener).enterDeclaraciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarPascalListener ) ((GrammarPascalListener)listener).exitDeclaraciones(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarPascalVisitor ) return ((GrammarPascalVisitor<? extends T>)visitor).visitDeclaraciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionesContext declaraciones() throws RecognitionException {
		DeclaracionesContext _localctx = new DeclaracionesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaraciones);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			espacioDeclaracionVar();
			setState(77);
			sentencia_compuesta();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EspacioDeclaracionVarContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(GrammarPascalParser.VAR, 0); }
		public ListaDeclaracionVarContext listaDeclaracionVar() {
			return getRuleContext(ListaDeclaracionVarContext.class,0);
		}
		public EspacioDeclaracionVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_espacioDeclaracionVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarPascalListener ) ((GrammarPascalListener)listener).enterEspacioDeclaracionVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarPascalListener ) ((GrammarPascalListener)listener).exitEspacioDeclaracionVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarPascalVisitor ) return ((GrammarPascalVisitor<? extends T>)visitor).visitEspacioDeclaracionVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EspacioDeclaracionVarContext espacioDeclaracionVar() throws RecognitionException {
		EspacioDeclaracionVarContext _localctx = new EspacioDeclaracionVarContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_espacioDeclaracionVar);
		try {
			setState(82);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				match(VAR);
				setState(80);
				listaDeclaracionVar();
				}
				break;
			case BEGIN:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListaDeclaracionVarContext extends ParserRuleContext {
		public ListaIdentificadoresContext listaIdentificadores() {
			return getRuleContext(ListaIdentificadoresContext.class,0);
		}
		public TerminalNode COLON() { return getToken(GrammarPascalParser.COLON, 0); }
		public EspecificadorTipoContext especificadorTipo() {
			return getRuleContext(EspecificadorTipoContext.class,0);
		}
		public TerminalNode PUNTOCOMA() { return getToken(GrammarPascalParser.PUNTOCOMA, 0); }
		public ListaDeclaracionVarContext listaDeclaracionVar() {
			return getRuleContext(ListaDeclaracionVarContext.class,0);
		}
		public ListaDeclaracionVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaDeclaracionVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarPascalListener ) ((GrammarPascalListener)listener).enterListaDeclaracionVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarPascalListener ) ((GrammarPascalListener)listener).exitListaDeclaracionVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarPascalVisitor ) return ((GrammarPascalVisitor<? extends T>)visitor).visitListaDeclaracionVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListaDeclaracionVarContext listaDeclaracionVar() throws RecognitionException {
		ListaDeclaracionVarContext _localctx = new ListaDeclaracionVarContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_listaDeclaracionVar);
		try {
			setState(96);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				listaIdentificadores(0);
				setState(85);
				match(COLON);
				setState(86);
				especificadorTipo();
				setState(87);
				match(PUNTOCOMA);
				setState(88);
				listaDeclaracionVar();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				listaIdentificadores(0);
				setState(91);
				match(COLON);
				setState(92);
				especificadorTipo();
				setState(93);
				match(PUNTOCOMA);
				System.out.println("Declarando variable");
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Sentencia_compuestaContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(GrammarPascalParser.BEGIN, 0); }
		public TerminalNode END() { return getToken(GrammarPascalParser.END, 0); }
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public TerminalNode PUNTOCOMA() { return getToken(GrammarPascalParser.PUNTOCOMA, 0); }
		public Sentencia_compuestaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia_compuesta; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarPascalListener ) ((GrammarPascalListener)listener).enterSentencia_compuesta(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarPascalListener ) ((GrammarPascalListener)listener).exitSentencia_compuesta(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarPascalVisitor ) return ((GrammarPascalVisitor<? extends T>)visitor).visitSentencia_compuesta(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Sentencia_compuestaContext sentencia_compuesta() throws RecognitionException {
		Sentencia_compuestaContext _localctx = new Sentencia_compuestaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_sentencia_compuesta);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(BEGIN);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 134438148L) != 0) {
				{
				{
				setState(99);
				sentencia();
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(105);
			match(END);
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PUNTOCOMA) {
				{
				setState(106);
				match(PUNTOCOMA);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaContext extends ParserRuleContext {
		public SentenciaAsignacionContext sentenciaAsignacion() {
			return getRuleContext(SentenciaAsignacionContext.class,0);
		}
		public Sentencia_compuestaContext sentencia_compuesta() {
			return getRuleContext(Sentencia_compuestaContext.class,0);
		}
		public Sentencia_condicionalContext sentencia_condicional() {
			return getRuleContext(Sentencia_condicionalContext.class,0);
		}
		public Sentencia_cicloContext sentencia_ciclo() {
			return getRuleContext(Sentencia_cicloContext.class,0);
		}
		public Sentencia_funcionesContext sentencia_funciones() {
			return getRuleContext(Sentencia_funcionesContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarPascalListener ) ((GrammarPascalListener)listener).enterSentencia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarPascalListener ) ((GrammarPascalListener)listener).exitSentencia(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarPascalVisitor ) return ((GrammarPascalVisitor<? extends T>)visitor).visitSentencia(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_sentencia);
		try {
			setState(114);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				sentenciaAsignacion();
				}
				break;
			case BEGIN:
				enterOuterAlt(_localctx, 2);
				{
				setState(110);
				sentencia_compuesta();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 3);
				{
				setState(111);
				sentencia_condicional();
				}
				break;
			case WHILE:
			case FOR:
			case REPEAT:
				enterOuterAlt(_localctx, 4);
				{
				setState(112);
				sentencia_ciclo();
				}
				break;
			case WRITE:
			case WRITELN:
			case READ:
				enterOuterAlt(_localctx, 5);
				{
				setState(113);
				sentencia_funciones();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaAsignacionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GrammarPascalParser.ID, 0); }
		public TerminalNode ASIGNACION() { return getToken(GrammarPascalParser.ASIGNACION, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode PUNTOCOMA() { return getToken(GrammarPascalParser.PUNTOCOMA, 0); }
		public SentenciaAsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentenciaAsignacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarPascalListener ) ((GrammarPascalListener)listener).enterSentenciaAsignacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarPascalListener ) ((GrammarPascalListener)listener).exitSentenciaAsignacion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarPascalVisitor ) return ((GrammarPascalVisitor<? extends T>)visitor).visitSentenciaAsignacion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenciaAsignacionContext sentenciaAsignacion() throws RecognitionException {
		SentenciaAsignacionContext _localctx = new SentenciaAsignacionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_sentenciaAsignacion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(ID);
			setState(117);
			match(ASIGNACION);
			setState(118);
			expresion();
			setState(119);
			match(PUNTOCOMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
